--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -332,6 +332,7 @@ nav {
         background: $medBlue;
         z-index: 1;
         overflow-y: scroll;
+        @media screen and (max-width: $mobileBreakpoint) { max-height: calc(100vh - ($navHeight + $pageMargin * 2)); }
         > * { color: $lightBlue; }
         h2 { margin-bottom: 2rem; }
         h3 { 
@@ -354,7 +355,22 @@ nav {
             color: $veryLightBlue;
             transition: 0.25s ease;
             margin: $pageMargin auto 0 auto;
-            &:hover { opacity: 0.5; }
+            &:hover { 
+                opacity: 0.5; 
+                &::after { opacity: 1; }
+            }
+            &::after {
+                content: "";
+                display: block;
+                top: calc($pageMargin / 2);
+                left: calc($pageMargin / 3);
+                position: fixed;
+                width: 0.75rem;
+                aspect-ratio: 1 / 1;
+                background: url("../images/about/arrow.svg") center no-repeat;
+                background-size: contain;
+                opacity: 0.75;
+            }
         }
     }
 }
@@ -421,39 +437,44 @@ nav {
                 text-align: center;
                 @include fontTitle(); 
             }
-
             .itemPrice { 
                 display: none;
                 position: relative;
                 margin: 0 auto 0.75rem auto;
                 font-size: 0.75rem;
-                &.sold {
-                    display: block;
-                    transform: translateX(-2rem); // translates leftwards, half the width of "sold" text
-                    color: $warning;
-                    opacity: 0.5;
-                    &::before { // strikethrough
-                        content: "";
-                        position: absolute;
-                        width: 100%;
-                        height: 0.125rem;
-                        background: $warning;
-                        top: calc(50% - 0.125rem / 2);
-                        left: 0;
-                    }
-                    &::after { // width is 4rem;
-                        content: "sold";
-                        position: absolute;
-                        margin: -0.4rem 0 0 0.5rem;
-                        border: 0.125rem solid $warning;
-                        padding: 0.25rem;
-                    }
-                }
             }
             .itemDescription { 
                 display: inline-block; 
                 margin: auto;
             }
+        }
+    }
+}
+
+/* SOLD POTS •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+
+#homeContent .itemsGrid > .sold {
+    // display: none;
+    .itemPrice { 
+        display: block;
+        transform: translateX(-2rem); // translates leftwards, half the width of "sold" text
+        color: $warning;
+        opacity: 0.5;
+        &::before { // strikethrough
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 0.125rem;
+            background: $warning;
+            top: calc(50% - 0.125rem / 2);
+            left: 0;
+        }
+        &::after { // width is 4rem;
+            content: "sold";
+            position: absolute;
+            margin: -0.4rem 0 0 0.5rem;
+            border: 0.125rem solid $warning;
+            padding: 0.25rem;
         }
     }
 }
