--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -58,6 +58,10 @@ h5 {
   font-size: 1rem;
 }
 
+a {
+  transition: 0.25s ease;
+}
+
 .button {
   font-family: "Krona One", sans-serif;
   font-weight: 400;
@@ -477,6 +481,7 @@ nav .mobileMenu {
 #homeContent .itemsGrid > * {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   padding: 1rem;
   background: #161E2E;
   border-radius: 0.5rem;
@@ -510,12 +515,12 @@ nav .mobileMenu {
 #homeContent .itemsGrid > * .itemPrice {
   display: none;
   position: relative;
-  margin: 0 auto 0.75rem auto;
+  margin: 0 auto 1rem auto;
   font-size: 0.75rem;
 }
 #homeContent .itemsGrid > * .itemDescription {
   display: inline-block;
-  margin: auto;
+  margin: 0 auto;
 }
 
 /* SOLD POTS •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
@@ -528,7 +533,7 @@ nav .mobileMenu {
   justify-content: center;
   color: #677DA7;
   font-size: 0.85rem;
-  opacity: 0.65;
+  opacity: 0.75;
 }
 #toggleSoldContainer #toggleSold {
   position: relative;
