--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -69,6 +69,7 @@ h2 { font-size: 1.5rem; }
 h3 { font-size: 1.25rem; }
 h4 { font-size: 1.125rem; }
 h5 { font-size: 1rem; }
+a { transition: 0.25s ease; }
 
 .button {
     @include fontTitle();
@@ -414,6 +415,7 @@ nav {
         > * {
             display: flex;
             flex-direction: column;
+            justify-content: flex-start;
             padding: 1rem; 
             background: $medBlue; 
             border-radius: 0.5rem;
@@ -440,12 +442,12 @@ nav {
             .itemPrice { 
                 display: none;
                 position: relative;
-                margin: 0 auto 0.75rem auto;
+                margin: 0 auto 1rem auto;
                 font-size: 0.75rem;
             }
             .itemDescription { 
                 display: inline-block; 
-                margin: auto;
+                margin: 0 auto;
             }
         }
     }
